--- a/views/index.jade
+++ b/views/index.jade
@@ -7,5 +7,5 @@ head
   meta(content="initial-scale=1.0,maximum-scale=1.0,width=device-width,user-scalable=no" name="viewport")
 body
   div(id="app")
-  //- script(src="http://192.168.199.182:8091/dist/app.js")
+  //- script(src="http://192.168.199.182:8091/public/js/app.js")
   script(src="js/app.js")
